# codeleap-test

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yaml  entrypoint.sh  manage.py  nginx.codeleap.conf  pyproject.toml  readme.md  swagger.json
accounts/: managers.py  models.py  serializers.py  urls.py  views.py
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_rename_carrers_careers_alter_careers_options.py
api/tests/: test_api.py  test_setup.py
careers/: asgi.py  settings.py  urls.py  wsgi.py
